// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Footer
    buttons={
      Array [
        Object {
          "href": "#",
          "id": "item1",
          "label": "Item 1",
        },
        Object {
          "href": "#",
          "id": "item2",
          "label": "Item 2",
        },
        Object {
          "id": "item3",
          "label": "Item 3",
          "sub": Object {
            "id": "item3sub",
            "items": Array [
              Object {
                "href": "#",
                "id": "subitem1",
                "label": "Sub-item 1",
              },
              Object {
                "href": "#",
                "id": "subitem2",
                "label": "Sub-item 2",
              },
            ],
          },
        },
        Object {
          "href": "#",
          "id": "item4",
          "label": "Item 4",
        },
      ]
    }
    classes={
      Object {
        "@media (max-width: 991px)": "@media (max-width: 991px)",
        "dropdownElement": "dropdownElement",
        "dropdownLink": "dropdownLink",
        "dropdownMenu": "dropdownMenu",
        "footer": "footer",
        "footerList": "footerList",
        "link": "link",
        "listElement": "listElement",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <ul
        className="footerList"
      >
        <li
          className="listElement"
        >
          <a
            className="link"
            href="#"
            id="item1"
            onClick={undefined}
            target={undefined}
          >
            Item 1
          </a>
        </li>
        <li
          className="listElement"
        >
          <a
            className="link"
            href="#"
            id="item2"
            onClick={undefined}
            target={undefined}
          >
            Item 2
          </a>
        </li>
        <li
          className="listElement"
        >
          <a
            className="link"
            href={undefined}
            id="item3"
            onClick={[Function]}
            target={undefined}
          >
            Item 3
          </a>
          <ul
            className="dropdownMenu"
            id="item3sub"
            style={undefined}
          >
            <li
              className="dropdownElement"
            >
              <a
                className="dropdownLink"
                href="#"
                id="subitem1"
                target={undefined}
              >
                Sub-item 1
              </a>
            </li>
            <li
              className="dropdownElement"
            >
              <a
                className="dropdownLink"
                href="#"
                id="subitem2"
                target={undefined}
              >
                Sub-item 2
              </a>
            </li>
          </ul>
        </li>
        <li
          className="listElement"
        >
          <a
            className="link"
            href="#"
            id="item4"
            onClick={undefined}
            target={undefined}
          >
            Item 4
          </a>
        </li>
      </ul>,
      "className": "footer",
      "fluid": true,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <li
            className="listElement"
          >
            <a
              className="link"
              href="#"
              id="item1"
              onClick={undefined}
              target={undefined}
            >
              Item 1
            </a>
          </li>,
          <li
            className="listElement"
          >
            <a
              className="link"
              href="#"
              id="item2"
              onClick={undefined}
              target={undefined}
            >
              Item 2
            </a>
          </li>,
          <li
            className="listElement"
          >
            <a
              className="link"
              href={undefined}
              id="item3"
              onClick={[Function]}
              target={undefined}
            >
              Item 3
            </a>
            <ul
              className="dropdownMenu"
              id="item3sub"
              style={undefined}
            >
              <li
                className="dropdownElement"
              >
                <a
                  className="dropdownLink"
                  href="#"
                  id="subitem1"
                  target={undefined}
                >
                  Sub-item 1
                </a>
              </li>
              <li
                className="dropdownElement"
              >
                <a
                  className="dropdownLink"
                  href="#"
                  id="subitem2"
                  target={undefined}
                >
                  Sub-item 2
                </a>
              </li>
            </ul>
          </li>,
          <li
            className="listElement"
          >
            <a
              className="link"
              href="#"
              id="item4"
              onClick={undefined}
              target={undefined}
            >
              Item 4
            </a>
          </li>,
        ],
        "className": "footerList",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "item1",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <a
                className="link"
                href="#"
                id="item1"
                onClick={undefined}
                target={undefined}
              >
                Item 1
              </a>,
              undefined,
            ],
            "className": "listElement",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Item 1",
                "className": "link",
                "href": "#",
                "id": "item1",
                "onClick": undefined,
                "target": undefined,
              },
              "ref": null,
              "rendered": "Item 1",
              "type": "a",
            },
            undefined,
          ],
          "type": "li",
        },
        Object {
          "instance": null,
          "key": "item2",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <a
                className="link"
                href="#"
                id="item2"
                onClick={undefined}
                target={undefined}
              >
                Item 2
              </a>,
              undefined,
            ],
            "className": "listElement",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Item 2",
                "className": "link",
                "href": "#",
                "id": "item2",
                "onClick": undefined,
                "target": undefined,
              },
              "ref": null,
              "rendered": "Item 2",
              "type": "a",
            },
            undefined,
          ],
          "type": "li",
        },
        Object {
          "instance": null,
          "key": "item3",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <a
                className="link"
                href={undefined}
                id="item3"
                onClick={[Function]}
                target={undefined}
              >
                Item 3
              </a>,
              <ul
                className="dropdownMenu"
                id="item3sub"
                style={undefined}
              >
                <li
                  className="dropdownElement"
                >
                  <a
                    className="dropdownLink"
                    href="#"
                    id="subitem1"
                    target={undefined}
                  >
                    Sub-item 1
                  </a>
                </li>
                <li
                  className="dropdownElement"
                >
                  <a
                    className="dropdownLink"
                    href="#"
                    id="subitem2"
                    target={undefined}
                  >
                    Sub-item 2
                  </a>
                </li>
              </ul>,
            ],
            "className": "listElement",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Item 3",
                "className": "link",
                "href": undefined,
                "id": "item3",
                "onClick": [Function],
                "target": undefined,
              },
              "ref": null,
              "rendered": "Item 3",
              "type": "a",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <li
                    className="dropdownElement"
                  >
                    <a
                      className="dropdownLink"
                      href="#"
                      id="subitem1"
                      target={undefined}
                    >
                      Sub-item 1
                    </a>
                  </li>,
                  <li
                    className="dropdownElement"
                  >
                    <a
                      className="dropdownLink"
                      href="#"
                      id="subitem2"
                      target={undefined}
                    >
                      Sub-item 2
                    </a>
                  </li>,
                ],
                "className": "dropdownMenu",
                "id": "item3sub",
                "style": undefined,
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "subitem1",
                  "nodeType": "host",
                  "props": Object {
                    "children": <a
                      className="dropdownLink"
                      href="#"
                      id="subitem1"
                      target={undefined}
                    >
                      Sub-item 1
                    </a>,
                    "className": "dropdownElement",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Sub-item 1",
                      "className": "dropdownLink",
                      "href": "#",
                      "id": "subitem1",
                      "target": undefined,
                    },
                    "ref": null,
                    "rendered": "Sub-item 1",
                    "type": "a",
                  },
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": "subitem2",
                  "nodeType": "host",
                  "props": Object {
                    "children": <a
                      className="dropdownLink"
                      href="#"
                      id="subitem2"
                      target={undefined}
                    >
                      Sub-item 2
                    </a>,
                    "className": "dropdownElement",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Sub-item 2",
                      "className": "dropdownLink",
                      "href": "#",
                      "id": "subitem2",
                      "target": undefined,
                    },
                    "ref": null,
                    "rendered": "Sub-item 2",
                    "type": "a",
                  },
                  "type": "li",
                },
              ],
              "type": "ul",
            },
          ],
          "type": "li",
        },
        Object {
          "instance": null,
          "key": "item4",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <a
                className="link"
                href="#"
                id="item4"
                onClick={undefined}
                target={undefined}
              >
                Item 4
              </a>,
              undefined,
            ],
            "className": "listElement",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Item 4",
                "className": "link",
                "href": "#",
                "id": "item4",
                "onClick": undefined,
                "target": undefined,
              },
              "ref": null,
              "rendered": "Item 4",
              "type": "a",
            },
            undefined,
          ],
          "type": "li",
        },
      ],
      "type": "ul",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <ul
          className="footerList"
        >
          <li
            className="listElement"
          >
            <a
              className="link"
              href="#"
              id="item1"
              onClick={undefined}
              target={undefined}
            >
              Item 1
            </a>
          </li>
          <li
            className="listElement"
          >
            <a
              className="link"
              href="#"
              id="item2"
              onClick={undefined}
              target={undefined}
            >
              Item 2
            </a>
          </li>
          <li
            className="listElement"
          >
            <a
              className="link"
              href={undefined}
              id="item3"
              onClick={[Function]}
              target={undefined}
            >
              Item 3
            </a>
            <ul
              className="dropdownMenu"
              id="item3sub"
              style={undefined}
            >
              <li
                className="dropdownElement"
              >
                <a
                  className="dropdownLink"
                  href="#"
                  id="subitem1"
                  target={undefined}
                >
                  Sub-item 1
                </a>
              </li>
              <li
                className="dropdownElement"
              >
                <a
                  className="dropdownLink"
                  href="#"
                  id="subitem2"
                  target={undefined}
                >
                  Sub-item 2
                </a>
              </li>
            </ul>
          </li>
          <li
            className="listElement"
          >
            <a
              className="link"
              href="#"
              id="item4"
              onClick={undefined}
              target={undefined}
            >
              Item 4
            </a>
          </li>
        </ul>,
        "className": "footer",
        "fluid": true,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li
              className="listElement"
            >
              <a
                className="link"
                href="#"
                id="item1"
                onClick={undefined}
                target={undefined}
              >
                Item 1
              </a>
            </li>,
            <li
              className="listElement"
            >
              <a
                className="link"
                href="#"
                id="item2"
                onClick={undefined}
                target={undefined}
              >
                Item 2
              </a>
            </li>,
            <li
              className="listElement"
            >
              <a
                className="link"
                href={undefined}
                id="item3"
                onClick={[Function]}
                target={undefined}
              >
                Item 3
              </a>
              <ul
                className="dropdownMenu"
                id="item3sub"
                style={undefined}
              >
                <li
                  className="dropdownElement"
                >
                  <a
                    className="dropdownLink"
                    href="#"
                    id="subitem1"
                    target={undefined}
                  >
                    Sub-item 1
                  </a>
                </li>
                <li
                  className="dropdownElement"
                >
                  <a
                    className="dropdownLink"
                    href="#"
                    id="subitem2"
                    target={undefined}
                  >
                    Sub-item 2
                  </a>
                </li>
              </ul>
            </li>,
            <li
              className="listElement"
            >
              <a
                className="link"
                href="#"
                id="item4"
                onClick={undefined}
                target={undefined}
              >
                Item 4
              </a>
            </li>,
          ],
          "className": "footerList",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "item1",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <a
                  className="link"
                  href="#"
                  id="item1"
                  onClick={undefined}
                  target={undefined}
                >
                  Item 1
                </a>,
                undefined,
              ],
              "className": "listElement",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Item 1",
                  "className": "link",
                  "href": "#",
                  "id": "item1",
                  "onClick": undefined,
                  "target": undefined,
                },
                "ref": null,
                "rendered": "Item 1",
                "type": "a",
              },
              undefined,
            ],
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "item2",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <a
                  className="link"
                  href="#"
                  id="item2"
                  onClick={undefined}
                  target={undefined}
                >
                  Item 2
                </a>,
                undefined,
              ],
              "className": "listElement",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Item 2",
                  "className": "link",
                  "href": "#",
                  "id": "item2",
                  "onClick": undefined,
                  "target": undefined,
                },
                "ref": null,
                "rendered": "Item 2",
                "type": "a",
              },
              undefined,
            ],
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "item3",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <a
                  className="link"
                  href={undefined}
                  id="item3"
                  onClick={[Function]}
                  target={undefined}
                >
                  Item 3
                </a>,
                <ul
                  className="dropdownMenu"
                  id="item3sub"
                  style={undefined}
                >
                  <li
                    className="dropdownElement"
                  >
                    <a
                      className="dropdownLink"
                      href="#"
                      id="subitem1"
                      target={undefined}
                    >
                      Sub-item 1
                    </a>
                  </li>
                  <li
                    className="dropdownElement"
                  >
                    <a
                      className="dropdownLink"
                      href="#"
                      id="subitem2"
                      target={undefined}
                    >
                      Sub-item 2
                    </a>
                  </li>
                </ul>,
              ],
              "className": "listElement",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Item 3",
                  "className": "link",
                  "href": undefined,
                  "id": "item3",
                  "onClick": [Function],
                  "target": undefined,
                },
                "ref": null,
                "rendered": "Item 3",
                "type": "a",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <li
                      className="dropdownElement"
                    >
                      <a
                        className="dropdownLink"
                        href="#"
                        id="subitem1"
                        target={undefined}
                      >
                        Sub-item 1
                      </a>
                    </li>,
                    <li
                      className="dropdownElement"
                    >
                      <a
                        className="dropdownLink"
                        href="#"
                        id="subitem2"
                        target={undefined}
                      >
                        Sub-item 2
                      </a>
                    </li>,
                  ],
                  "className": "dropdownMenu",
                  "id": "item3sub",
                  "style": undefined,
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": "subitem1",
                    "nodeType": "host",
                    "props": Object {
                      "children": <a
                        className="dropdownLink"
                        href="#"
                        id="subitem1"
                        target={undefined}
                      >
                        Sub-item 1
                      </a>,
                      "className": "dropdownElement",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Sub-item 1",
                        "className": "dropdownLink",
                        "href": "#",
                        "id": "subitem1",
                        "target": undefined,
                      },
                      "ref": null,
                      "rendered": "Sub-item 1",
                      "type": "a",
                    },
                    "type": "li",
                  },
                  Object {
                    "instance": null,
                    "key": "subitem2",
                    "nodeType": "host",
                    "props": Object {
                      "children": <a
                        className="dropdownLink"
                        href="#"
                        id="subitem2"
                        target={undefined}
                      >
                        Sub-item 2
                      </a>,
                      "className": "dropdownElement",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Sub-item 2",
                        "className": "dropdownLink",
                        "href": "#",
                        "id": "subitem2",
                        "target": undefined,
                      },
                      "ref": null,
                      "rendered": "Sub-item 2",
                      "type": "a",
                    },
                    "type": "li",
                  },
                ],
                "type": "ul",
              },
            ],
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "item4",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <a
                  className="link"
                  href="#"
                  id="item4"
                  onClick={undefined}
                  target={undefined}
                >
                  Item 4
                </a>,
                undefined,
              ],
              "className": "listElement",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Item 4",
                  "className": "link",
                  "href": "#",
                  "id": "item4",
                  "onClick": undefined,
                  "target": undefined,
                },
                "ref": null,
                "rendered": "Item 4",
                "type": "a",
              },
              undefined,
            ],
            "type": "li",
          },
        ],
        "type": "ul",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Footer styles matches the snapshot 1`] = `
Object {
  "@media (max-width: 991px)": Object {
    "footer": Object {
      "display": "none !important",
    },
  },
  "dropdownElement": Object {
    "float": "left",
    "listStyle": "none",
  },
  "dropdownLink": Object {
    "&:hover": Object {
      "color": "#ffffff",
      "textDecoration": "none",
    },
    "color": "#cdcdcd",
    "display": "block",
    "lineHeight": "1.42857143",
    "padding": "3px 18px",
    "textDecoration": "none",
  },
  "dropdownMenu": Object {
    "background": "#242424",
    "borderRadius": "4px",
    "bottom": "calc(100% + 10px)",
    "boxShadow": "0 6px 12px rgba(0,0,0,.175)",
    "display": "none",
    "fontSize": "12px",
    "left": "50%",
    "listStyle": "none",
    "minWidth": "160px",
    "padding": "5px 0",
    "position": "absolute",
    "textAlign": "left",
    "transform": "translateX(-50%)",
    "zIndex": "2",
  },
  "footer": Object {
    "backgroundColor": "#242424",
    "color": "#cdcdcd",
    "fontFamily": "'Nunito Sans', sans-serif",
    "fontSize": "12px",
    "height": "25px",
    "margin": "0",
    "padding": "0 40px",
  },
  "footerList": Object {
    "listStyle": "none",
    "margin": "0",
    "padding": "4px 0 0 0",
    "width": "auto",
  },
  "link": Object {
    "&:hover": Object {
      "color": "#ffffff",
      "textDecoration": "none",
    },
    "color": "#cdcdcd",
    "cursor": "pointer",
    "textDecoration": "none",
  },
  "listElement": Object {
    "float": "left",
    "listStyle": "none",
    "margin": "0 50px 0 0",
    "padding": "0",
    "position": "relative",
  },
}
`;

exports[`FooterJSS matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Jss(Footer)
    buttons={
      Array [
        Object {
          "href": "#",
          "id": "item1",
          "label": "Item 1",
        },
        Object {
          "href": "#",
          "id": "item2",
          "label": "Item 2",
        },
        Object {
          "id": "item3",
          "label": "Item 3",
          "sub": Object {
            "id": "item3sub",
            "items": Array [
              Object {
                "href": "#",
                "id": "subitem1",
                "label": "Sub-item 1",
              },
              Object {
                "href": "#",
                "id": "subitem2",
                "label": "Sub-item 2",
              },
            ],
          },
        },
        Object {
          "href": "#",
          "id": "item4",
          "label": "Item 4",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "buttons": Array [
        Object {
          "href": "#",
          "id": "item1",
          "label": "Item 1",
        },
        Object {
          "href": "#",
          "id": "item2",
          "label": "Item 2",
        },
        Object {
          "id": "item3",
          "label": "Item 3",
          "sub": Object {
            "id": "item3sub",
            "items": Array [
              Object {
                "href": "#",
                "id": "subitem1",
                "label": "Sub-item 1",
              },
              Object {
                "href": "#",
                "id": "subitem2",
                "label": "Sub-item 2",
              },
            ],
          },
        },
        Object {
          "href": "#",
          "id": "item4",
          "label": "Item 4",
        },
      ],
      "classes": Object {
        "dropdownElement": "Footer-dropdownElement-0-1-6",
        "dropdownLink": "Footer-dropdownLink-0-1-7",
        "dropdownMenu": "Footer-dropdownMenu-0-1-5",
        "footer": "Footer-footer-0-1-1",
        "footerList": "Footer-footerList-0-1-2",
        "link": "Footer-link-0-1-4",
        "listElement": "Footer-listElement-0-1-3",
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "buttons": Array [
          Object {
            "href": "#",
            "id": "item1",
            "label": "Item 1",
          },
          Object {
            "href": "#",
            "id": "item2",
            "label": "Item 2",
          },
          Object {
            "id": "item3",
            "label": "Item 3",
            "sub": Object {
              "id": "item3sub",
              "items": Array [
                Object {
                  "href": "#",
                  "id": "subitem1",
                  "label": "Sub-item 1",
                },
                Object {
                  "href": "#",
                  "id": "subitem2",
                  "label": "Sub-item 2",
                },
              ],
            },
          },
          Object {
            "href": "#",
            "id": "item4",
            "label": "Item 4",
          },
        ],
        "classes": Object {
          "dropdownElement": "Footer-dropdownElement-0-1-6",
          "dropdownLink": "Footer-dropdownLink-0-1-7",
          "dropdownMenu": "Footer-dropdownMenu-0-1-5",
          "footer": "Footer-footer-0-1-1",
          "footerList": "Footer-footerList-0-1-2",
          "link": "Footer-link-0-1-4",
          "listElement": "Footer-listElement-0-1-3",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
